2010-10-24  Robert Larice
 * src/maths/sparse/spalloc.c ,
 * src/maths/sparse/spbuild.c ,
 * src/maths/sparse/spdefs.h ,
 * src/maths/sparse/spfactor.c ,
 * src/maths/sparse/spoutput.c ,
 * src/maths/sparse/sputils.c :
  rename ALLOC, REALLOC, CALLOC, FREE, in the "src/maths/sparse" domain
    -> SP_MALLOC, SP_REALLOC, SP_CALLOC, SP_FREE

2010-10-24  Robert Larice
 * src/include/complex.h :
  ngcomplex_t instead of complex, #2/2
    rename the structure as well

2010-10-24  Robert Larice
 * src/frontend/com_compose.c ,
 * src/frontend/com_fft.c ,
 * src/frontend/com_let.c ,
 * src/frontend/define.c ,
 * src/frontend/diff.c ,
 * src/frontend/evaluate.c ,
 * src/frontend/outitf.c ,
 * src/frontend/plotting/plotit.c ,
 * src/frontend/postcoms.c ,
 * src/frontend/rawfile.c ,
 * src/frontend/spec.c ,
 * src/frontend/vectors.c ,
 * src/include/complex.h ,
 * src/include/dvec.h ,
 * src/maths/cmaths/cmath.h ,
 * src/maths/cmaths/cmath1.c ,
 * src/maths/cmaths/cmath2.c ,
 * src/maths/cmaths/cmath3.c ,
 * src/maths/cmaths/cmath4.c ,
 * src/maths/cmaths/test_cx_j.c ,
 * src/maths/cmaths/test_cx_mag.c ,
 * src/maths/cmaths/test_cx_ph.c ,
 * src/ngsconvert.c :
  ngcomplex_t instead of complex, #1/2
    purpose: avoid name collision

2010-10-17  Holger Vogt
 * main.c: add mktemp.h

2010-10-16  Holger Vogt
 * windisp.h, windisp.c: prototypes

2010-10-16  Robert Larice
 * configure.ac :
  stronger warning levels, redeclarations, missing prototypes, k&r style ...

2010-10-16  Robert Larice
 * src/main.c ,
 * src/frontend/Makefile.am ,
 * src/frontend/breakp.c ,
 * src/frontend/com_ahelp.c ,
 * src/frontend/com_measure2.c ,
 * src/frontend/com_option.c ,
 * src/frontend/com_sysinfo.c ,
 * src/frontend/commands.c ,
 * src/frontend/cpitf.c ,
 * src/frontend/device.c ,
 * src/frontend/device.h ,
 * src/frontend/dotcards.c ,
 * src/frontend/inp.c ,
 * src/frontend/measure.c ,
 * src/frontend/misccoms.h ,
 * src/frontend/postcoms.c ,
 * src/frontend/postcoms.h ,